--- a/META.yml
+++ b/META.yml
@@ -17,6 +17,8 @@ no_index:
   directory:
     - inc
     - t
+requires:
+  perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
