--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,12 @@ abstract: 'is this jpeg?'
 author:
   - 'Tokuhiro Matsuno <tokuhirom ah! gmail.com>'
 build_requires:
-  Test::More: 0
+  ExtUtils::MakeMaker: 6.42
+  Test::More: 0.92
 configure_requires:
-  ExtUtils::MakeMaker: 6.50
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.81'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,8 +18,10 @@ no_index:
   directory:
     - inc
     - t
+    - xt
 requires:
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.06
+  repository: git://github.com/tokuhirom/p5-image-jpegcheck.git
+version: 0.07
